# Quadcopter-Flight-Stabilization

./: Quadcopter_Report.ipynb  README.MD  README.md  main.py
Legacey/C Variant/: CMakeLists.txt  attitude.c  attitude.h  battery.c  battery.h  calibration.c  calibration.h  control.c  control.h  imu_i2c.c  imu_i2c.h  main.c  motors.c  motors.h  mpu6050.c  mpu6050.h  safety.c  safety.h
Src/: attitude.py  battery.py  calibration.py  control.py  imu.py  motors.py  safety.py
src/: attitude.py  battery.py  calibration.py  control.py  imu.py  motors.py  safety.py
